# interlock-ai-mvp-demo

./: .gitignore  CHECKPOINTS.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
corpora/aes/: README.md  manifest.example.yaml  near_real_seed.yaml  public_cross_doc_manifest.yaml  public_demo_manifest.yaml
docs/: CROSS_DOC_STATUS_2026-05-25.md  DEMO_VIDEO_SCRIPT.md  DEMO_WALKTHROUGH_2026-05-25.md  MVP_AUDIT_2026-05-25.md  NEXT_STEPS_2026-05-25.md  STREAMLIT_CLOUD_DEPLOYMENT_2026-05-25.md  STREAMLIT_DYNAMIC_APP_2026-05-25.md  SUBMISSION_AUTHORSHIP.md  SUBMISSION_PACKET.md  SUBMISSION_PRD.md  SUBMISSION_TDD.md  VC_NEXT_STEPS_2026-05-25.md  VERCEL_DEPLOYMENT_2026-05-25.md
eval/: cross_doc.yaml  demo.yaml  negative.yaml  public_transformer_cross_doc_synth.yaml  public_transformer_spec_synth.yaml  real_xfmr_smoke.yaml  scanned.yaml  synth_reference_smoke.yaml
examples/: REAL_LIFE_EXAMPLES.md  aes_authority.yaml  aes_glossary.yaml
interlock_mvp/: __init__.py  cli.py  streamlit_app.py  ui.py
interlock_mvp/core/: __init__.py  artifacts.py  authority.py  corpus.py  (+25 more)
scripts/: make_synthetic_transformer_cross_doc.py  make_synthetic_transformer_revision.py
tests/: test_authority.py  test_context_memory.py  test_context_support.py  test_corpus.py  test_demo_package.py  test_docgraph.py  test_domain_dictionary.py  test_env.py  test_eval.py  test_evidence.py  test_normalization.py  test_reasoning.py  test_review_integration.py  test_search.py  test_streamlit_app.py  test_triage.py  test_ui.py  test_verification.py
